# ro-crate-inveniordm

./: .env.template  .gitignore  CITATION.cff  README.md  credentials.template.py  deposit.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  test.yml
docs/: all-mappings.md  developer_guide.md  mapping.md
mapping/: condition_functions.py  converter.py  processing_functions.py
src/rocrate_inveniordm/: deposit.py
src/rocrate_inveniordm/mapping/: condition_functions.py  converter.py  crate_utils.py  mapping.json  mapping_utils.py  processing_functions.py
src/rocrate_inveniordm/upload/: credentials.py  uploader.py
test/data/: datacite-out-minimal-ro-crate.json  datacite-out-real-world-example.json  datacite-out-utf-8-csv-crate.json
test/data/legacy-ro-crate/: ro-crate-metadata.jsonld
test/data/test-referencing-ro-crate/: ro-crate-metadata.json
test/data/utf-8-csv-crate/: ro-crate-metadata.json
test/integration/: test_integration.py
test/unit/: template-crate.json  test_conditions.py  test_converter.py  test_crate_utils.py  test_credentials.py  test_mapping_utils.py  test_processing.py  test_publisher.py  test_uploader.py  test_utils.py  utils.py
upload/: uploader.py
