[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry

[tool.poetry]
name = "rocrate-inveniordm"
version = "2.0.0"
description = "Upload RO-Crates to InvenioRDM and automatically fill the metadata. Supports any InvenioRDM instance, including Zenodo."
authors = [
    "Philipp Beer",
    "Milan Szente",
    "Eli Chadwick <eli.chadwick@manchester.ac.uk>",
]
maintainers = ["Eli Chadwick <eli.chadwick@manchester.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.researchobject.org/ro-crate/"
repository = "https://github.com/ResearchObject/ro-crate-inveniordm"
keywords = ["rocrate", "RO-Crate", "InvenioRDM"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
python-dateutil = "2.9.0"
python-iso639 = "^2023.6.15"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240622"
types-pytz = "^2024.1.0.20240417"
types-python-dateutil = "^2.9.0.20240316"

[tool.poetry.scripts]
rocrate_inveniordm = "rocrate_inveniordm.deposit:main"

[tool.poetry.urls]
"Issues" = "https://github.com/ResearchObject/ro-crate-inveniordm/issues"

# Testing tools

## Pytest

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=rocrate_inveniordm"
